# gpui-preview

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/gpui-preview/: Cargo.toml
crates/gpui-preview-derive/: Cargo.toml
crates/gpui-preview-derive/src/: lib.rs
crates/gpui-preview/src/: app.rs  capture.rs  error.rs  lib.rs  registry.rs  stories.rs  traits.rs  types.rs
crates/gpui-preview/tests/: derive_behavior.rs  derive_compile_tests.rs  struct_derive_test.rs
crates/gpui-preview/tests/ui/fail/: data_enum.rs  data_enum.stderr  tuple_struct.rs  tuple_struct.stderr  union.rs  union.stderr
docs/: frame-capture.md  how-to-use.md
examples/capture-test/: Cargo.toml
examples/capture-test/src/: main.rs
examples/my-app-preview/: Cargo.toml
examples/my-app-preview/src/: main.rs
