[package]
name = "gpui-preview"
version = "0.1.0"
edition = "2024"

[features]
default = []
capture = ["dep:image"]

[dependencies]
anyhow = "1.0.102"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-preview-derive = { path = "../gpui-preview-derive" }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
trybuild = "1"
gpui = "0.2.2"
